--- a/whoswinningredux/app/src/main/AndroidManifest.xml
+++ b/whoswinningredux/app/src/main/AndroidManifest.xml
@@ -24,6 +24,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".SettingsActivity"/>
+        <activity android:name=".HistoryActivity"/>
     </application>
 
 </manifest>
