--- a/whoswinningredux/gradle/libs.versions.toml
+++ b/whoswinningredux/gradle/libs.versions.toml
@@ -1,22 +1,22 @@
 [versions]
-agp = "8.7.3"
-kotlin = "1.9.23"
-coreKtx = "1.13.1"
+agp = "8.9.0"
+kotlin = "2.0.0"
+coreKtx = "1.15.0"
 junit = "4.13.2"
-junitVersion = "1.1.5"
-espressoCore = "3.5.1"
-realm = "10.18.0"
-kotlinxSerializationJsonVersion = "1.6.3"
-lifecycleRuntimeKtx = "2.8.1"
-activityCompose = "1.9.0"
-composeBom = "2024.05.00"
-realmGradlePlugin = "10.18.0"
-fragmentKtx = "1.7.1"
+junitVersion = "1.2.1"
+espressoCore = "3.6.1"
+realm = "10.19.0"
+kotlinxSerializationJsonVersion = "1.8.0"
+lifecycleRuntimeKtx = "2.8.7"
+activityCompose = "1.10.1"
+composeBom = "2025.03.00"
+realmGradlePlugin = "10.19.0"
+fragmentKtx = "1.8.6"
 roomRuntime = "2.6.1"
 roomCompile = "2.6.1"
 roomPlugin = "2.6.1"
-ksp = "1.9.23-1.0.20"
-material3 = "1.2.1"
+ksp = "2.0.0-1.0.22"
+material3 = "1.3.1"
 
 
 [libraries]
@@ -39,7 +39,7 @@ androidx-ui = { group = "androidx.compose.ui", name = "ui" }
 androidx-ui-graphics = { group = "androidx.compose.ui", name = "ui-graphics" }
 androidx-ui-tooling = { group = "androidx.compose.ui", name = "ui-tooling" }
 androidx-ui-tooling-preview = { group = "androidx.compose.ui", name = "ui-tooling-preview" }
-androidx-ui-test-manifest = { group = "androidx.compose.ui", name = "ui-test-manifest" }
+androidx-ui-test-manifest = { group = "androidx.compose.ui", name = "ui-test-manifest", version = "1.7.8" }
 androidx-ui-test-junit4 = { group = "androidx.compose.ui", name = "ui-test-junit4" }
 androidx-material3 = { group = "androidx.compose.material3", name = "material3", version.ref="material3" }
 kotlinx-serialization-json = { module = "org.jetbrains.kotlinx:kotlinx-serialization-json", version.ref = "kotlinxSerializationJsonVersion" }
@@ -52,6 +52,7 @@ androidx-fragment-ktx = { group = "androidx.fragment", name = "fragment-ktx", ve
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
 jetbrains-kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
+compose-compiler = { id = "org.jetbrains.kotlin.plugin.compose", version.ref = "kotlin" }
 jetbrains-kotlin-serialization = { id = "org.jetbrains.kotlin.plugin.serialization", version.ref = "kotlin" }
 android-ksp = { id = "com.google.devtools.ksp", version.ref = "ksp" }
 androidx-room = { id = "androidx.room", version.ref = "roomPlugin"}
